Update colors to fix contrast issue

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -38,7 +38,7 @@
 }
 .footer .social-media ul a,
 .footer .privacy ul a {
-  color: #ffffff;
+  color: #111b33;
 }
 
 .footer .contact-links li {
